--- a/index.html
+++ b/index.html
@@ -253,6 +253,39 @@
                         </div>
                   </div>
             </div>
+            <div class="find">
+                  <div class="find-inner">
+                        <div class="find-inner-img">
+                              
+                        </div>
+                        <div class="find-inner-text">
+                              <h3>find your best room here</h3>
+                              <p>
+                                    Lorem ipsum dolor sit amet consectetur 
+                                    adipisicing elit. Mollitia impedit 
+                                    voluptatem incidunt illum laboriosam 
+                                    ipsum ducimus magni sint expedita! 
+                                    Odit totam, repellat adipisci quaerat 
+                                    modi officiis natus aperiam asperiores 
+                                    ut!
+                              </p>
+                              <br>
+                              <p>
+                                    Lorem ipsum dolor sit amet 
+                                    consectetur adipisicing elit. 
+                                    Maiores accusantium praesentium 
+                                    maxime mollitia vitae reiciendis 
+                                    fuga esse. Consequatur, esse 
+                                    quaerat! Iusto sequi sapiente, 
+                                    officia dignissimos numquam 
+                                    accusamus nam aperiam quaerat.
+                              </p>
+                              <div class="find-inner-text-link">
+                                    <a href="#">read more</a>
+                              </div>
+                        </div>
+                  </div>
+            </div>
       </div>
 </body>
 </html>
