--- a/index.html
+++ b/index.html
@@ -286,6 +286,51 @@
                         </div>
                   </div>
             </div>
+            <div class="from">
+                  <div class="conatiner">
+                        <div class="from-inner">
+                              <div class="from-inner-learn">
+                                    <div class="from-inner-learn-el">
+                                          <h3>from the guest</h3>
+                                    </div>
+                                    <div class="from-inner-learn-text">
+                                          <p>
+                                                Lorem ipsum, dolor sit amet 
+                                                consectetur adipisicing elit. 
+                                                Vitae consectetur odio laboriosam 
+                                                delectus impedit ipsam nesciunt, 
+                                                molestiae numquam totam autem quasi 
+                                                modi sit ullam dolorem, tempore 
+                                                facilis nemo magni eligendi.
+                                          </p>
+                                    </div>
+                              </div>
+                              <div class="from-inner-block">
+                                    <div class="from-inner-block-img">
+                                          <img src="images/Ellipse.png" alt="Ellipse">
+                                    </div>
+                                    <div class="from-inner-block-text">
+                                          <span>andrew strauss</span>
+                                          <p>From New York, USA</p>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+            <div class="keep">
+                  <div class="container">
+                        <div class="keep-inner">
+                              <div class="keep-inner-text">
+                                    <p>keep clam and enjoy vaction</p>
+                              </div>
+                              <div class="keep-inner-link">
+                                    <a href="#">
+                                          <img src="images/play.png" alt="play">
+                                    </a>
+                              </div>
+                        </div>
+                  </div>
+            </div>
       </div>
 </body>
 </html>
